@@ -3,6 +3,7 @@
    xmlns:browser="http://namespaces.zope.org/browser">
 
   <browser:defaultView name="index.html" />
+  <browser:defaultSkin name="Rotterdam" />
 
   <include package="zope.app.exception.browser" />
   <include package="zope.app.traversing.browser" />
