@@ -54,24 +54,6 @@
         />
 
     <meta:directive
-        name="skin"
-        schema=".metadirectives.ISkinDirective"
-        handler="zope.app.component.metaconfigure.skin"
-        />
-
-    <meta:directive
-        name="defaultSkin"
-        schema=".metadirectives.IDefaultSkinDirective"
-        handler="zope.app.component.metaconfigure.defaultSkin"
-        />
-
-    <meta:directive
-        name="layer"
-        schema=".metadirectives.ILayerDirective"
-        handler="zope.app.component.metaconfigure.layer"
-        />
-
-    <meta:directive
         name="serviceType"
         schema=".metadirectives.IServiceTypeDirective"
         handler="zope.app.component.metaconfigure.serviceType"
