@@ -18,12 +18,12 @@ $Id$
 
 from zope.app import zapi
 from zope.publisher.interfaces.browser import IBrowserRequest
-from zope.app.component.metaconfigure import skin, layer
 from zope.app.component.metaconfigure import handler
 from zope.app.container.interfaces import IAdding
 from zope.app.publisher.browser.globalbrowsermenuservice \
      import menuItemDirective
 from zope.app.component.contentdirective import ContentDirective
+from zope.app.servicenames import Presentation
 
 # referred to through ZCML
 from zope.app.publisher.browser.resourcemeta import resource, \
@@ -31,6 +31,30 @@ from zope.app.publisher.browser.resourcemeta import resource, \
 from zope.app.publisher.browser.i18nresourcemeta import I18nResource
 from zope.app.publisher.browser.viewmeta import view
 from zope.app.component.interface import provideInterface
+
+def layer(_context, name):
+    _context.action(
+        discriminator = ('layer', name),
+        callable = handler,
+        args = (Presentation, 'defineLayer', name, _context.info)
+        )
+
+def skin(_context, name, layers):
+    if ',' in ''.join(layers):
+        raise TypeError("Commas are not allowed in layer names.")
+
+    _context.action(
+        discriminator = ('skin', name),
+        callable = handler,
+        args = (Presentation, 'defineSkin', name, layers, _context.info)
+        )
+
+def defaultSkin(_context, name):
+    _context.action(
+        discriminator = 'defaultSkin',
+        callable = handler,
+        args = (Presentation, 'setDefaultSkin', name, _context.info)
+        )
 
 def defaultView(_context, name, for_=None):
 
